# iai_naive_kinematics_sim

./: CMakeLists.txt  README.md  package.xml
include/iai_naive_kinematics_sim/: iai_naive_kinematics_sim.hpp  simulator.hpp  simulator_node.hpp  system.hpp  utils.hpp  watchdog.hpp
launch/: boxy.launch  pr2.launch  test_projection.launch  test_sim.launch
msg/: ProjectionClock.msg
rosinstall/: base.rosinstall
script/: fake_base_controller.py  map_odom_transform_publisher.py  navp_faker_tf.py  odom_map_transform_publisher.py  wsg_50_faker.py
src/iai_naive_kinematics_sim/: simulator_main.cpp  simulator_node.cpp  velocity_resolved_sim.cpp
srv/: SetJointState.srv  UpdateTransform.srv
test/iai_naive_kinematics_sim/: simulator.cpp  system.cpp  watchdog.cpp
test_data/: boxy_start_config.yaml  pr2_start_config.yaml  test_config.yaml  test_projection_config.yaml  test_sim_config.yaml
test_scripts/: send_cmd  trigger_projection
