<?xml version="1.0"?>
<package format="2">
  <name>iai_naive_kinematics_sim</name>
  <version>0.0.4</version>
  <description>
    A set of naive robot kinematics simulators for ROS. Main design goal: Providing 
    a ROS-based kinematics simulator for early-stage development of kinematics algorithms
    that is light-weight in comparison to full-scale simulators, e.g. Gazebo.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>urdf</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ros_control_boilerplate</depend>
  <depend>position_controllers</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>joint_state_publisher</depend>
  <test_depend>gtest</test_depend>
  <test_depend>rosunit</test_depend>

</package>
